# node-camera

./: .gitignore  .npmignore  CMakeCache.txt  CMakeLists.txt  Camera.cpp  Camera.h  CameraDummy.cpp  CameraDummy.h  CapturedImage.cpp  CapturedImage.h  ChannelIndex.h  ManualResetEvent.cpp  ManualResetEvent.h  ManualResetEventData.h  PixelFormat.h  V4LCamera.cpp  V4LCamera.h  V4LCameraData.cpp  V4LCameraData.h  VideoListener.cpp  VideoListener.h  VideoProperty.h  index.d.ts  index.js  index.js.map  jpegEncoder.cpp  jpegEncoder.h  jpegEncoderData.cpp  jpegEncoderData.h  node-camera-dummy.cpp  node-camera.cpp  package-lock.json  package.json  test.js  tsconfig.json
interfaces/: ICamera.h  ICameraListener.h  IUncopyable.h
ts/: index.ts
